# DS_olympics_2019

./: Makefile  best_submission.ipynb  pyproject.toml
Exploration/: Pandas_profiling.ipynb
Modelisation/: LGBM_grid_search_CV.ipynb
Preprocessing/: Preprocessing.ipynb  preprocessing_functions.py
